<resources>
    <string name="app_name">DuckIt</string>

    <string name="new_post">New Post</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed_403_404">Account not found or invalid password</string>
    <string name="login_failed">Login failed, please check internet connection</string>

    <string name="sign_up_failed_409">Account already existed</string>

    <string name="invalid_new_post">Invalid new post info</string>

    <string name="headline">Headline</string>
    <string name="url">Duck Image URL</string>
    <string name="up_vote">Up Vote</string>
    <string name="down_vote">Down Vote</string>
</resources>